--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_PROJECT_ID=planit-fe5a6
 REACT_APP_STORAGE_BUCKET=planit-fe5a6.appspot.com
 REACT_APP_MESSAGIN_SENDER_ID=675884781512
 REACT_APP_APP_ID=1:675884781512:web:370902bc20d2dc539c3afd
+REACT_APP_RAZORPAY_TEST_API_KEY=rzp_test_4nbDPQFhkRCqyF	
