--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-REACT_APP_API_KEY=AIzaSyDkFuatdk-wyzX7bzdW_hHKG0jnlLjGJz0
-REACT_APP_AUTH_DOMAIN=planit-fe5a6.firebaseapp.com
-REACT_APP_PROJECT_ID=planit-fe5a6
-REACT_APP_STORAGE_BUCKET=planit-fe5a6.appspot.com
-REACT_APP_MESSAGIN_SENDER_ID=675884781512
-REACT_APP_APP_ID=1:675884781512:web:370902bc20d2dc539c3afd
-REACT_APP_RAZORPAY_TEST_API_KEY=rzp_test_4nbDPQFhkRCqyF	
+REACT_APP_API_KEY=AIzaSyBtBn5ap0EO-I13g6J_dtD697YWJqzbdi4
+REACT_APP_AUTH_DOMAIN=planitio.firebaseapp.com
+REACT_APP_PROJECT_ID=planitio
+REACT_APP_STORAGE_BUCKET=planitio.appspot.com
+REACT_APP_MESSAGIN_SENDER_ID=497089102036
+REACT_APP_APP_ID=1:497089102036:web:ba0646b433bb9c983cfb41
+REACT_APP_RAZORPAY_TEST_API_KEY=rzp_test_4nbDPQFhkRCqyF
+PASSWORD=pkwlpdhfnxsytdzd
+EMAIL=sharma.tarun.2506@gmail.com
