--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^8.7.1",
     "moment": "^2.29.3",
+    "nodemailer": "^6.7.8",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
